--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
-<body style="background-color: rgb(25,25,25);">
+<body style="background-color: rgb(21,21,21);">
 <img src="https://lanyard.cnrad.dev/api/748530290917638165?bg=151515&idleMessage=...&borderRadius=0)](https://discord.com/users/748530290917638165">
 <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=lx78WyY0J5&count_private=true&theme=dark&hide_border=true">
 <img src="https://github-readme-stats.vercel.app/api?username=lx78WyY0J5&count_private=true&show_icons=true&theme=dark&hide_border=true">
 <img src="https://github-readme-streak-stats.herokuapp.com?user=lx78WyY0J5&count_private=true&theme=dark&hide_border=true">
-<img src="https://github-profile-trophy.vercel.app/?username=lx78WyY0J5&theme=darkhub&&no-frame=true">
+<img src="https://github-profile-trophy.vercel.app/?username=lx78WyY0J5&theme=darkhub&&no-frame=true&no-bg=true">
 </body>
